Sun day session test repo and implement usesCases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">WeatherApp</string>
     <string name="increment">Increment</string>
+    <string name="favorites">Favorities</string>
+    <string name="city_name">city name</string>
+    <string name="search">search</string>
 </resources>
