--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="favorites">Favorities</string>
     <string name="city_name">city name</string>
     <string name="search">search</string>
+    <string name="show">Show</string>
 </resources>
